# QRCode-generator-web-app

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
QRCode-generator-web-app/: README.md
QRCode-generator-web-app/app/: app.py  qr_code_generator.py
QRCode-generator-web-app/app/static/css/: error.css
QRCode-generator-web-app/app/templates/: error_403.html
QRCode-generator-web-app/deploy/systemd/: qr_code_app.service
app/: app.py  file_cleaner.py  qr_code_generator.py  test.py
app/qr_codes/: qr_code_15_07_2021_12_53_10_67592
app/static/css/: error.css  index.css
app/templates/: error_400.html  error_403.html  error_404.html  error_500.html  file_does_not_exist.html  index.html
deploy/: qr_code_app.service  qr_code_generator  supervisor_deploy_script.sh
