[tool.poetry]
name = "QRcode-generator"
version = "0.1.0"
description = "simple web app for QRcode generation"
authors = ["Alexander Gusakov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
