[tool.poetry]
name = "qrcode-generator-web-app"
version = "0.1.0"
description = ""
authors = ["Alexander Gusakov <alexandergusakov@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
Pillow = "^9.2.0"
qrcode = "^7.3.1"
Flask = "^2.1.3"
gevent = "^21.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
